feat: Implement compass data types and functionality
This commit introduces three new data types for displaying compass information:
- **Degrees:** Shows the current heading in degrees.
- **CardinalDirection:** Displays the current heading as a cardinal direction (N, NE, E, etc.).
- **Pitch (Grade):** Shows the current pitch/grade as a percentage.

Key changes include:
- Renaming the project and relevant files from "template" to "karoocompass".
- Adding `CompassProvider` to manage sensor data (accelerometer and magnetic field) and provide flows for heading and pitch.
- Implementing `DegreesDataType`, `CardinalDirectionDataType`, and `PitchDataType` to handle the display and streaming of the respective compass data.
- Creating a `CardinalView` composable for the graphical display of cardinal directions.
- Updating `extension_info.xml` to define the new data types.
- Updating `AndroidManifest.xml` with the new application name and extension service.
- Modifying `strings.xml` to include titles and descriptions for the new data types.
- Removing the placeholder `MainScreen` content.
- Adding a compass icon.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name=".TemplateApplication"
+        android:name=".CompassApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,14 +14,14 @@
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.currand60.karooexttemplate.MAIN" />
+                <action android:name="com.currand60.karoocompass.MAIN" />
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <service
-            android:name=".extension.TemplateExtension"
+            android:name=".extension.CompassExtension"
             android:exported="true"
             tools:ignore="ExportedService">
             <intent-filter>
@@ -33,7 +33,7 @@
         </service>
         <meta-data
             android:name="io.hammerhead.karooext.MANIFEST_URL"
-            android:value="https://github.com/currand/karoo-ext-template/releases/latest/download/manifest.json" />
+            android:value="https://github.com/currand/karoo-compass/releases/latest/download/manifest.json" />
     </application>
 
 </manifest>
